# rust-hexagonal-architecture

./: .gitignore  Cargo.toml  Makefile  README..md  database.sql
src/: main.rs
src/api/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  health.rs  mod.rs  router.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/pokemon/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/pokemon/repository/: repository.rs
