[package]
name = "rust-hexagonal-architecture"
version = "0.1.0"
authors = ["prongbang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.2.1"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
clap = "2.33.3"
dialoguer = "0.8.0"
rusqlite = "0.26.0"
ureq = { version = "2.2.0", features = ["json"] }
